@@ -1,5 +1,10 @@
 What's new...
 
+Apr 5/2017 : JF 15.3.0 released
+  - fix : javaforce.controls.Controller : brought back S7 multi-tag reading (performance improvement)
+    - jfDataLogger/0.11
+    - jfDataLoggerPlus/0.7
+
 Mar 30/2017 : JF 15.2.0 released!
   - fix : javaforce.controls.Controller.isConnected() was always returning false for NI devices
     - jfDataLogger/0.10
